[workspace]
members = [
  "lib/client",
  "programs/*",
]
resolver = "2"

[workspace.dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.10.1"
solana-account-decoder = "1.18.11"
solana-client = "1.18.11"
solana-logger = "1.18.11"
solana-program = "1.18.11"
solana-program-test = "1.18.11"
solana-rpc = "1.18.11"
solana-sdk = "1.18.11"
spl-associated-token-account = "1.0.3"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3